--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -167,6 +167,22 @@
   number = {2}
 }
 
+@article{brooksStatisticalModelingPatterns2019,
+  title = {Statistical Modeling of Patterns in Annual Reproductive Rates},
+  author = {Brooks, Mollie E. and Kristensen, Kasper and Darrigo, Maria Rosa and Rubim, Paulo and Uriarte, Mar{\'i}a and Bruna, Emilio and Bolker, Benjamin M.},
+  year = {2019},
+  volume = {100},
+  pages = {e02706},
+  issn = {1939-9170},
+  doi = {10.1002/ecy.2706},
+  copyright = {\textcopyright{} 2019 by the Ecological Society of America},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Brooks et al_2019_Statistical modeling of patterns in annual reproductive rates.pdf},
+  journal = {Ecology},
+  keywords = {GLMM,model selection,model validation,overdispersion,statistics,zero inflation},
+  language = {en},
+  number = {7}
+}
+
 @techreport{brynVeilederKartleggingAv2015,
   title = {Veileder for Kartlegging Av Terrestrisk Naturvariasjon Etter {{NiN}} 2.0. Veileder Versjon 2.0.0.},
   author = {Bryn, Anders and Halvorsen, Rune},
@@ -528,6 +544,14 @@
   address = {{Washington D.C.}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Harris_1990_Sitka spruce.pdf},
   keywords = {forest,sitka spruce}
+}
+
+@manual{hartigDHARMaResidualDiagnostics2020,
+  title = {{{DHARMa}}: {{Residual}} Diagnostics for Hierarchical (Multi-Level / Mixed) Regression Models},
+  author = {Hartig, Florian},
+  year = {2020},
+  keywords = {R package},
+  type = {Manual}
 }
 
 @article{hewittTreeSeedDispersal2002,
